# CxShell

./: .gitignore  AGENTS.md  App.axaml  App.axaml.cs  ChiXueSsh.csproj  ChiXueSsh.slnx  CxShell.csproj  CxShell.slnx  NOTICE  Program.cs  README.md  README.zh-CN.md  app.manifest
Controls/: LineChartControl.cs  MonitorConverters.cs  PieChartControl.cs  ResizableStackPanel.cs  TerminalControl.cs
Converters/: ConnectionStatusConverter.cs
Models/: MonitorData.cs  SessionGroup.cs  SessionInfo.cs  SftpFileItem.cs
Services/: AppUpdateService.cs  FtpService.cs  IFileTransferService.cs  ITerminalConnectionService.cs  LinuxProcParser.cs  LocalTerminalConnectionService.cs  LocalizationService.cs  PasswordEncryptionService.cs  PlatformServices.cs  ProxyConnectionFactory.cs  RdpBridgeClient.cs  RdpLaunchService.cs  RloginConnectionService.cs  SerialConnectionService.cs  ServerMonitorService.cs  SessionLogWriter.cs  SessionStorageService.cs  SftpService.cs  SshAgentAuthService.cs  SshAgentForwardingService.cs  SshAlgorithmPreferenceService.cs  SshConnectionService.cs  SshServerInfo.cs  TelnetConnectionService.cs  TerminalSessionOptions.cs  VncClientService.cs  WindowsVirtualFileDragDropService.cs  XymodemTransfer.cs  ZmodemTransfer.cs
Terminal/: AnsiParser.cs  TerminalBuffer.cs  TerminalCell.cs  TerminalColors.cs
ViewModels/: MainWindowViewModel.cs  RdpViewModel.cs  RemoteFileEditorViewModel.cs  ServerMonitorViewModel.cs  SessionEditViewModel.cs  SessionTreeViewModel.cs  SftpConverters.cs  (+6 more)
native/CxRdpBridge/: CMakeLists.txt  README.md  cxrdp_bridge.cpp  cxrdp_bridge.h
(+34 files in other folders)
